# themes_classification

./: .gitignore  README.md  pyproject.toml
service/: theme_classification_api.py
